crates/flowscope-core/tests/snapshots/golden__golden_column_lineage_union_captures_outputs.snap
---
source: crates/flowscope-core/tests/golden.rs
expression: cleaned
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "UNION",
      "nodes": [
        {
          "id": "column_17365cc1224ceac1",
          "type": "column",
          "label": "name",
          "qualifiedName": "users.name"
        },
        {
          "id": "column_4e2818afb2d843ce",
          "type": "column",
          "label": "id",
          "qualifiedName": "admins.id"
        },
        {
          "id": "column_629d7cf5d2e3562d",
          "type": "column",
          "label": "name"
        },
        {
          "id": "column_d72cd19b5a365f79",
          "type": "column",
          "label": "name",
          "qualifiedName": "admins.name"
        },
        {
          "id": "column_d8bba385e09d94a9",
          "type": "column",
          "label": "id"
        },
        {
          "id": "column_f6b363282306de23",
          "type": "column",
          "label": "id",
          "qualifiedName": "users.id"
        },
        {
          "id": "output_b558dd754c71cfa6",
          "type": "output",
          "label": "Output"
        },
        {
          "id": "table_10a0682dff76cdbc",
          "type": "table",
          "label": "users",
          "qualifiedName": "users"
        },
        {
          "id": "table_4381a9deb65a1136",
          "type": "table",
          "label": "admins",
          "qualifiedName": "admins"
        }
      ],
      "edges": [
        {
          "id": "edge_00352050e7c56142",
          "from": "column_f6b363282306de23",
          "to": "column_d8bba385e09d94a9",
          "type": "data_flow"
        },
        {
          "id": "edge_3a0e0d8fcf9a533c",
          "from": "table_4381a9deb65a1136",
          "to": "column_d72cd19b5a365f79",
          "type": "ownership"
        },
        {
          "id": "edge_46d7820d6ac5b957",
          "from": "column_4e2818afb2d843ce",
          "to": "column_d8bba385e09d94a9",
          "type": "data_flow"
        },
        {
          "id": "edge_5e15ea4b11217d15",
          "from": "column_d72cd19b5a365f79",
          "to": "column_629d7cf5d2e3562d",
          "type": "data_flow"
        },
        {
          "id": "edge_a3f920a599d368fb",
          "from": "column_17365cc1224ceac1",
          "to": "column_629d7cf5d2e3562d",
          "type": "data_flow"
        },
        {
          "id": "edge_a92e0d09881d5676",
          "from": "table_10a0682dff76cdbc",
          "to": "column_f6b363282306de23",
          "type": "ownership"
        },
        {
          "id": "edge_b1adfd2ed7cda1e5",
          "from": "output_b558dd754c71cfa6",
          "to": "column_d8bba385e09d94a9",
          "type": "ownership"
        },
        {
          "id": "edge_bb5bebb5a946099c",
          "from": "output_b558dd754c71cfa6",
          "to": "column_629d7cf5d2e3562d",
          "type": "ownership"
        },
        {
          "id": "edge_ca4078f641aa8fdc",
          "from": "table_10a0682dff76cdbc",
          "to": "column_17365cc1224ceac1",
          "type": "ownership"
        },
        {
          "id": "edge_ef6d8b744f05c507",
          "from": "table_4381a9deb65a1136",
          "to": "column_4e2818afb2d843ce",
          "type": "ownership"
        }
      ],
      "joinCount": 0,
      "complexityScore": 10
    }
  ],
  "globalLineage": {
    "nodes": [
      {
        "id": "column_1fafa75822fcf49b",
        "type": "column",
        "label": "id",
        "canonicalName": {
          "schema": "users",
          "name": "id"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_f6b363282306de23"
          }
        ]
      },
      {
        "id": "column_3cf9faa82a446690",
        "type": "column",
        "label": "name",
        "canonicalName": {
          "schema": "users",
          "name": "name"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_17365cc1224ceac1"
          }
        ]
      },
      {
        "id": "column_629d7cf5d2e3562d",
        "type": "column",
        "label": "name",
        "canonicalName": {
          "name": "name"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_629d7cf5d2e3562d"
          }
        ]
      },
      {
        "id": "column_9c5f2403642b6170",
        "type": "column",
        "label": "name",
        "canonicalName": {
          "schema": "admins",
          "name": "name"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_d72cd19b5a365f79"
          }
        ]
      },
      {
        "id": "column_c3ac9ffac8257162",
        "type": "column",
        "label": "id",
        "canonicalName": {
          "schema": "admins",
          "name": "id"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_4e2818afb2d843ce"
          }
        ]
      },
      {
        "id": "column_d8bba385e09d94a9",
        "type": "column",
        "label": "id",
        "canonicalName": {
          "name": "id"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_d8bba385e09d94a9"
          }
        ]
      },
      {
        "id": "output_b558dd754c71cfa6",
        "type": "output",
        "label": "Output",
        "canonicalName": {
          "name": "Output"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "output_b558dd754c71cfa6"
          }
        ]
      },
      {
        "id": "table_10a0682dff76cdbc",
        "type": "table",
        "label": "users",
        "canonicalName": {
          "name": "users"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "table_10a0682dff76cdbc"
          }
        ]
      },
      {
        "id": "table_4381a9deb65a1136",
        "type": "table",
        "label": "admins",
        "canonicalName": {
          "name": "admins"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "table_4381a9deb65a1136"
          }
        ]
      }
    ],
    "edges": [
      {
        "id": "edge_00352050e7c56142",
        "from": "column_1fafa75822fcf49b",
        "to": "column_d8bba385e09d94a9",
        "type": "data_flow",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_3a0e0d8fcf9a533c",
        "from": "table_4381a9deb65a1136",
        "to": "column_9c5f2403642b6170",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_46d7820d6ac5b957",
        "from": "column_c3ac9ffac8257162",
        "to": "column_d8bba385e09d94a9",
        "type": "data_flow",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_5e15ea4b11217d15",
        "from": "column_9c5f2403642b6170",
        "to": "column_629d7cf5d2e3562d",
        "type": "data_flow",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_a3f920a599d368fb",
        "from": "column_3cf9faa82a446690",
        "to": "column_629d7cf5d2e3562d",
        "type": "data_flow",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_a92e0d09881d5676",
        "from": "table_10a0682dff76cdbc",
        "to": "column_1fafa75822fcf49b",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_b1adfd2ed7cda1e5",
        "from": "output_b558dd754c71cfa6",
        "to": "column_d8bba385e09d94a9",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_bb5bebb5a946099c",
        "from": "output_b558dd754c71cfa6",
        "to": "column_629d7cf5d2e3562d",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_ca4078f641aa8fdc",
        "from": "table_10a0682dff76cdbc",
        "to": "column_3cf9faa82a446690",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_ef6d8b744f05c507",
        "from": "table_4381a9deb65a1136",
        "to": "column_c3ac9ffac8257162",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      }
    ]
  },
  "issues": [],
  "summary": {
    "statementCount": 1,
    "tableCount": 2,
    "columnCount": 6,
    "joinCount": 0,
    "complexityScore": 10,
    "issueCount": {
      "errors": 0,
      "warnings": 0,
      "infos": 0
    },
    "hasErrors": false
  }
}
