crates/flowscope-core/tests/snapshots/golden__golden_ctas_captures_target_columns.snap
---
source: crates/flowscope-core/tests/golden.rs
expression: cleaned
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "CREATE_TABLE_AS",
      "nodes": [
        {
          "id": "column_073ed625e10d73f3",
          "type": "column",
          "label": "upper_name",
          "expression": "UPPER(name)",
          "metadata": {
            "data_type": "TEXT"
          }
        },
        {
          "id": "column_17365cc1224ceac1",
          "type": "column",
          "label": "name",
          "qualifiedName": "users.name"
        },
        {
          "id": "column_8ebd316ab60e6446",
          "type": "column",
          "label": "id"
        },
        {
          "id": "column_f6b363282306de23",
          "type": "column",
          "label": "id",
          "qualifiedName": "users.id"
        },
        {
          "id": "table_10a0682dff76cdbc",
          "type": "table",
          "label": "users",
          "qualifiedName": "users"
        },
        {
          "id": "table_623e5f3551061424",
          "type": "table",
          "label": "tgt",
          "qualifiedName": "tgt"
        }
      ],
      "edges": [
        {
          "id": "edge_3e6988845fc0ddf0",
          "from": "table_623e5f3551061424",
          "to": "column_8ebd316ab60e6446",
          "type": "ownership"
        },
        {
          "id": "edge_44cc1d70df560fb4",
          "from": "table_10a0682dff76cdbc",
          "to": "table_623e5f3551061424",
          "type": "data_flow"
        },
        {
          "id": "edge_720f152947fb0bd4",
          "from": "column_17365cc1224ceac1",
          "to": "column_073ed625e10d73f3",
          "type": "derivation",
          "expression": "UPPER(name)"
        },
        {
          "id": "edge_a92e0d09881d5676",
          "from": "table_10a0682dff76cdbc",
          "to": "column_f6b363282306de23",
          "type": "ownership"
        },
        {
          "id": "edge_b867fc400d806570",
          "from": "table_623e5f3551061424",
          "to": "column_073ed625e10d73f3",
          "type": "ownership"
        },
        {
          "id": "edge_ca4078f641aa8fdc",
          "from": "table_10a0682dff76cdbc",
          "to": "column_17365cc1224ceac1",
          "type": "ownership"
        },
        {
          "id": "edge_f6501889408ccbfc",
          "from": "column_f6b363282306de23",
          "to": "column_8ebd316ab60e6446",
          "type": "data_flow"
        }
      ],
      "joinCount": 0,
      "complexityScore": 10
    }
  ],
  "globalLineage": {
    "nodes": [
      {
        "id": "column_073ed625e10d73f3",
        "type": "column",
        "label": "upper_name",
        "canonicalName": {
          "name": "upper_name"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_073ed625e10d73f3"
          }
        ]
      },
      {
        "id": "column_1fafa75822fcf49b",
        "type": "column",
        "label": "id",
        "canonicalName": {
          "schema": "users",
          "name": "id"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_f6b363282306de23"
          }
        ]
      },
      {
        "id": "column_3cf9faa82a446690",
        "type": "column",
        "label": "name",
        "canonicalName": {
          "schema": "users",
          "name": "name"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_17365cc1224ceac1"
          }
        ]
      },
      {
        "id": "column_8ebd316ab60e6446",
        "type": "column",
        "label": "id",
        "canonicalName": {
          "name": "id"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_8ebd316ab60e6446"
          }
        ]
      },
      {
        "id": "table_10a0682dff76cdbc",
        "type": "table",
        "label": "users",
        "canonicalName": {
          "name": "users"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "table_10a0682dff76cdbc"
          }
        ]
      },
      {
        "id": "table_623e5f3551061424",
        "type": "table",
        "label": "tgt",
        "canonicalName": {
          "name": "tgt"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "table_623e5f3551061424"
          }
        ]
      }
    ],
    "edges": [
      {
        "id": "edge_3e6988845fc0ddf0",
        "from": "table_623e5f3551061424",
        "to": "column_8ebd316ab60e6446",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_44cc1d70df560fb4",
        "from": "table_10a0682dff76cdbc",
        "to": "table_623e5f3551061424",
        "type": "data_flow",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_720f152947fb0bd4",
        "from": "column_3cf9faa82a446690",
        "to": "column_073ed625e10d73f3",
        "type": "derivation",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_a92e0d09881d5676",
        "from": "table_10a0682dff76cdbc",
        "to": "column_1fafa75822fcf49b",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_b867fc400d806570",
        "from": "table_623e5f3551061424",
        "to": "column_073ed625e10d73f3",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_ca4078f641aa8fdc",
        "from": "table_10a0682dff76cdbc",
        "to": "column_3cf9faa82a446690",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_f6501889408ccbfc",
        "from": "column_1fafa75822fcf49b",
        "to": "column_8ebd316ab60e6446",
        "type": "data_flow",
        "producerStatement": {
          "statementIndex": 0
        }
      }
    ]
  },
  "issues": [],
  "summary": {
    "statementCount": 1,
    "tableCount": 2,
    "columnCount": 4,
    "joinCount": 0,
    "complexityScore": 10,
    "issueCount": {
      "errors": 0,
      "warnings": 0,
      "infos": 0
    },
    "hasErrors": false
  },
  "resolvedSchema": {
    "tables": [
      {
        "name": "tgt",
        "columns": [
          {
            "name": "id",
            "origin": "implied"
          },
          {
            "name": "upper_name",
            "dataType": "TEXT",
            "origin": "implied"
          }
        ],
        "origin": "implied",
        "sourceStatementIndex": 0,
        "updatedAt": "2024-01-01T00:00:00Z"
      }
    ]
  }
}
