crates/flowscope-core/tests/snapshots/golden__golden_inline_select_tables_only.snap
---
source: crates/flowscope-core/tests/golden.rs
expression: cleaned
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "SELECT",
      "nodes": [
        {
          "id": "column_5f1cb9854f55ab15",
          "type": "column",
          "label": "total_amount"
        },
        {
          "id": "column_cd29f390cdda5f9c",
          "type": "column",
          "label": "total_amount",
          "qualifiedName": "orders.total_amount"
        },
        {
          "id": "column_d8bba385e09d94a9",
          "type": "column",
          "label": "id"
        },
        {
          "id": "column_f6b363282306de23",
          "type": "column",
          "label": "id",
          "qualifiedName": "users.id"
        },
        {
          "id": "output_b558dd754c71cfa6",
          "type": "output",
          "label": "Output"
        },
        {
          "id": "table_10a0682dff76cdbc",
          "type": "table",
          "label": "users",
          "qualifiedName": "users"
        },
        {
          "id": "table_eaa6ebb8f158751f",
          "type": "table",
          "label": "orders",
          "qualifiedName": "orders",
          "joinType": "INNER",
          "joinCondition": "u.id = o.user_id"
        }
      ],
      "edges": [
        {
          "id": "edge_0018c912aba985b3",
          "from": "output_b558dd754c71cfa6",
          "to": "column_5f1cb9854f55ab15",
          "type": "ownership"
        },
        {
          "id": "edge_00352050e7c56142",
          "from": "column_f6b363282306de23",
          "to": "column_d8bba385e09d94a9",
          "type": "data_flow"
        },
        {
          "id": "edge_a12016fed9425216",
          "from": "table_eaa6ebb8f158751f",
          "to": "column_cd29f390cdda5f9c",
          "type": "ownership"
        },
        {
          "id": "edge_a92e0d09881d5676",
          "from": "table_10a0682dff76cdbc",
          "to": "column_f6b363282306de23",
          "type": "ownership"
        },
        {
          "id": "edge_b1adfd2ed7cda1e5",
          "from": "output_b558dd754c71cfa6",
          "to": "column_d8bba385e09d94a9",
          "type": "ownership"
        },
        {
          "id": "edge_b88d4f17e7312bee",
          "from": "column_cd29f390cdda5f9c",
          "to": "column_5f1cb9854f55ab15",
          "type": "data_flow"
        }
      ],
      "joinCount": 1,
      "complexityScore": 20
    }
  ],
  "globalLineage": {
    "nodes": [
      {
        "id": "column_1fafa75822fcf49b",
        "type": "column",
        "label": "id",
        "canonicalName": {
          "schema": "users",
          "name": "id"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_f6b363282306de23"
          }
        ]
      },
      {
        "id": "column_46d6a4af3105be79",
        "type": "column",
        "label": "total_amount",
        "canonicalName": {
          "schema": "orders",
          "name": "total_amount"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_cd29f390cdda5f9c"
          }
        ]
      },
      {
        "id": "column_5f1cb9854f55ab15",
        "type": "column",
        "label": "total_amount",
        "canonicalName": {
          "name": "total_amount"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_5f1cb9854f55ab15"
          }
        ]
      },
      {
        "id": "column_d8bba385e09d94a9",
        "type": "column",
        "label": "id",
        "canonicalName": {
          "name": "id"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_d8bba385e09d94a9"
          }
        ]
      },
      {
        "id": "output_b558dd754c71cfa6",
        "type": "output",
        "label": "Output",
        "canonicalName": {
          "name": "Output"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "output_b558dd754c71cfa6"
          }
        ]
      },
      {
        "id": "table_10a0682dff76cdbc",
        "type": "table",
        "label": "users",
        "canonicalName": {
          "name": "users"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "table_10a0682dff76cdbc"
          }
        ]
      },
      {
        "id": "table_eaa6ebb8f158751f",
        "type": "table",
        "label": "orders",
        "canonicalName": {
          "name": "orders"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "table_eaa6ebb8f158751f"
          }
        ]
      }
    ],
    "edges": [
      {
        "id": "edge_0018c912aba985b3",
        "from": "output_b558dd754c71cfa6",
        "to": "column_5f1cb9854f55ab15",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_00352050e7c56142",
        "from": "column_1fafa75822fcf49b",
        "to": "column_d8bba385e09d94a9",
        "type": "data_flow",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_a12016fed9425216",
        "from": "table_eaa6ebb8f158751f",
        "to": "column_46d6a4af3105be79",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_a92e0d09881d5676",
        "from": "table_10a0682dff76cdbc",
        "to": "column_1fafa75822fcf49b",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_b1adfd2ed7cda1e5",
        "from": "output_b558dd754c71cfa6",
        "to": "column_d8bba385e09d94a9",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_b88d4f17e7312bee",
        "from": "column_46d6a4af3105be79",
        "to": "column_5f1cb9854f55ab15",
        "type": "data_flow",
        "producerStatement": {
          "statementIndex": 0
        }
      }
    ]
  },
  "issues": [],
  "summary": {
    "statementCount": 1,
    "tableCount": 2,
    "columnCount": 4,
    "joinCount": 1,
    "complexityScore": 20,
    "issueCount": {
      "errors": 0,
      "warnings": 0,
      "infos": 0
    },
    "hasErrors": false
  },
  "resolvedSchema": {
    "tables": [
      {
        "name": "orders",
        "columns": [
          {
            "name": "total_amount",
            "origin": "implied"
          },
          {
            "name": "user_id",
            "origin": "implied",
            "foreignKey": {
              "table": "users",
              "column": "id"
            }
          }
        ],
        "origin": "implied",
        "sourceStatementIndex": 0,
        "updatedAt": "2024-01-01T00:00:00Z",
        "constraints": [
          {
            "constraintType": "foreign_key",
            "columns": [
              "user_id"
            ],
            "referencedTable": "users",
            "referencedColumns": [
              "id"
            ]
          }
        ]
      },
      {
        "name": "users",
        "columns": [
          {
            "name": "id",
            "origin": "implied",
            "foreignKey": {
              "table": "orders",
              "column": "user_id"
            }
          }
        ],
        "origin": "implied",
        "sourceStatementIndex": 0,
        "updatedAt": "2024-01-01T00:00:00Z",
        "constraints": [
          {
            "constraintType": "foreign_key",
            "columns": [
              "id"
            ],
            "referencedTable": "orders",
            "referencedColumns": [
              "user_id"
            ]
          }
        ]
      }
    ]
  }
}
